# watchexec-simple

./: Cargo.toml  Justfile  README.md  package.json  pnpm-lock.yaml
src/: error.rs  filter.rs  main.rs
