[package]
name = "watchexec-simple"
version = "0.1.0"
edition = "2021"
default-run = "watchexec"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "watchexec"
path = "src/main.rs"

[dependencies]
clap = "3.0.12"
shell-escape = "0.1.5"
notify = "4"
regex = "1.5.4"
