[package]
name = "watchexec-simple"
version = "0.1.0"
edition = "2021"
default-run = "watchexec"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "watchexec"
path = "src/main.rs"

[dependencies]
clap = "3"
shell-escape = "0.1.5"
notify = "4"
regex = "1.5.4"
nix = "0.23.1"
command-group = "1.0.8"
glob = "0.3.0"
ignore = "0.4.18"
ctrlc = "3.2.1"
clearscreen = "1.0.9"
signal-hook = "0.3.13"
