[package]
name = "watchexec-simple"
version = "0.1.1"
edition = "2021"
default-run = "watchexec"
license = "MIT"
description = "An alternative to watchexec"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "watchexec"
path = "src/main.rs"

[dependencies]
clap = { version = "4.4.6", features = ["derive"]}
shell-escape = "0.1.5"
notify = "4.0.17"
regex = "1.5.4"
command-group = "2.1.0"
glob = "0.3.0"
ignore = "0.4.18"
ctrlc = "3.2.1"
clearscreen = "2.0.1"
signal-hook = "0.3.13"
tracing-subscriber = "0.3.17"
tracing = "0.1.40"